<resources>
    <string name="app_name">Simon</string>
    <string name="Start">Start Game</string>
    <string name="Difficulty">Difficulty</string>
    <string name="HighScores">High Scores</string>
    <string name="HighScore">High Score:</string>
    <string name="Score">Score:</string>
    <string name="Simon">Simon</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="LudacrisSpeed">LUDACRIS SPEED</string>
    <string name="GameOver">Game Over</string>
    <string name="PlayAgain">Play Again</string>
    <string name="MainMenu">Main Menu</string>
</resources>
