<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundBlack"
        tools:context=".MainActivity" android:addStatesFromChildren="false">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            app:layout_constraintWidth_percent="90"
            android:id="@+id/linearLayout" android:layout_marginTop="15dp" android:layout_marginBottom="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            tools:layout_editor_absoluteX="55dp">

        <TextView
                android:text="@string/Simon"
                android:textColor="@color/colorTextWhite"
                android:fontFamily="@font/federalescort"
                android:textSize="95sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="30dp"
                android:paddingTop="10dp"
                android:id="@+id/textView"/>

        <TextView style="@style/homeOptionsStyle"
                  android:text="@string/HighScore"
                  android:textColor="@color/colorTextWhite"
                  android:id="@+id/highScoreButton"/>
        <TextView style="@style/homeOptionsStyle"
                  android:text="@string/Easy"
                  android:textColor="@color/colorSimonRed"/>
        <TextView style="@style/homeOptionsStyle"
                  android:text="@string/Medium"
                  android:textColor="@color/colorSimonYellow"/>

        <TextView style="@style/homeOptionsStyle"
                android:text="@string/Hard"
                android:textColor="@color/colorSimonGreen"/>
        <TextView style="@style/homeOptionsStyle"
                  android:text="@string/LudacrisSpeed"
                  android:textColor="@color/colorSimonBlue"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>