<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@android:color/black"

        >
    <LinearLayout android:layout_width="match_parent"
                    android:backgroundTint="@color/colorBackgroundBlack"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
        <TextView
                android:text="@string/GameOver"
                android:fontFamily="@font/federalescort"
                android:textSize="50sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:id="@+id/GameOverText"/>

        <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"

                  android:orientation="horizontal"
                  android:gravity="center">
            <TextView style="@style/fragmentButtons"
                  android:background="@color/colorSimonRed"
                  android:id="@+id/mainMenuButton"
                  android:text="@string/MainMenu"
                  />
            <TextView style="@style/fragmentButtons"
                  android:fontFamily="@font/federalescort"
                  android:background="@color/colorSimonGreen"
                  android:id="@+id/playAgainButton"
                  android:text="@string/PlayAgain"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>